added the layout for the main section

--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,40 @@
   font-family: 'Ysabeau', sans-serif;
 }
 
-.container {
+/* Component stylings */
+li {
+  list-style: none;
+}
+
+/* Class stylings */
+.container-1 {
   display: flex;
   justify-content: space-between;
 }
 
+.container-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.container-2 > div:nth-child(2) {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+/* ID stylings */
 #image-1 {
   max-width: 25em;
 }
@@ -16,20 +45,7 @@
   max-width: 100%;
 }
 
-.App {
-  text-align: center;
-}
-
-li {
-  list-style: none;
-}
-
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
+/* Default React App Stuff */
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -55,6 +71,7 @@ li {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
