added link to learning page to the homepage

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,15 @@ p {
   justify-content: end;
 }
 
+#homepage-bg {
+  background-image: url(./Assets/hero-image.jpeg);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  padding-top: 5rem;
+}
+
 /* Default React App Stuff */
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
