--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,13 @@ p {
   pointer-events: none;
 }
 
+.home-text {
+  font-size: 50px;
+  font-weight: bold;
+  color: aliceblue;
+  text-shadow: 5px 5px 5px black;
+}
+
 /* ID stylings */
 #image-1 {
   max-width: 25em;
@@ -68,6 +75,17 @@ p {
   background-repeat: no-repeat;
   height: 100vh;
   padding-top: 5rem;
+}
+
+#home-el {
+  margin: 5rem;
+  text-align: right;
+}
+
+#home-el h1 {
+  font-size: 4 rem;
+  font-weight: 700;
+  padding-bottom: 2rem;
 }
 
 /* Default React App Stuff */
