major formatting changes

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
 * {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  --logo-color: #0470D3;
+  --color1: whitesmoke;
+  --color2: #FAF0E4;
+  --color3: #9BCDD2;
+  --color4: #FF8551;
+  --color5: #FFDEDE;
+  --color6: black;
+  --transparent1: rgba(245, 245, 245, 0);
+  --transparent2: #faf0e410;
+  --transparent6: rgba(0, 0, 0, 0.8);
 }
 
 /* Component stylings */
@@ -9,6 +19,19 @@ li {
 
 p {
   font-size: 1.5em;
+}
+
+a {
+  color: var(--color6);
+  font-size: large;
+  text-decoration: none;
+}
+
+button {
+  background-color: var(--color4);
+  padding: 1em;
+  border-radius: 1em;
+  border-style: none;
 }
 
 /* Class stylings */
@@ -47,13 +70,20 @@ p {
 }
 
 .home-text {
-  font-size: 50px;
   font-weight: bold;
-  color: aliceblue;
+  color: var(--color1);
   text-shadow: 5px 5px 5px black;
+}
+.home-text h1 {
+  font-size: 5em;
+}
+.home-text h6 {
+  font-size: 1em;
 }
 
 /* ID stylings */
+
+
 #image-1 {
   max-width: 25em;
 }
@@ -66,13 +96,15 @@ p {
 #footer {
   display: flex;
   justify-content: end;
+  font-size: 1em;
 }
 
 #homepage-bg {
-  background-image: url(./Assets/hero-image.jpeg);
+  background: linear-gradient(90deg, var(--transparent1), var(--transparent6)), url(./Assets/hero-image.jpeg) center center / cover no-repeat;
+  /* background-image: url(./Assets/hero-image.jpeg);
   background-size: cover;
   background-position: center center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
   height: 100vh;
   padding-top: 5rem;
 }
