--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,11 @@ button {
   align-items: center;
   justify-content: center;
 }
+.container-1 p {
+  display: flex;
+  align-items: end;
+  justify-content: right;
+}
 
 .container-2 {
   display: flex;
