--- a/src/App.css
+++ b/src/App.css
@@ -29,10 +29,13 @@ a {
 
 button {
   background-color: var(--color4);
-  padding: .5em;
+  padding: 0.5em;
   border-radius: 1rem;
   border-style: none;
   cursor: pointer;
+  font-size: inherit;
+  line-height: inherit;
+  vertical-align: middle;
 }
 
 /* Class stylings */
@@ -52,11 +55,6 @@ button {
   align-items: center;
   justify-content: center;
 }
-.container-1 p {
-  display: flex;
-  align-items: end;
-  justify-content: right;
-}
 
 .container-2 {
   display: flex;
@@ -65,11 +63,20 @@ button {
   align-items: center;
 }
 
+.container-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f5f5f5;
+  padding: 20px;
+}
+
 .image {
   float: right;
   width: 50%;
   height: auto;
   padding: 1em;
+  
 }
 
 .content {
@@ -133,7 +140,7 @@ button {
 
 #footer {
   display: flex;
-  justify-content: end;
+  justify-self: right;
   font-size: 1em;
 }
 
@@ -150,6 +157,15 @@ button {
 #home-el {
   margin: 5rem;
   text-align: right;
+}
+
+#footer-left {
+  display: flex;
+  align-items: start;
+}
+
+#footer-right {
+  font-size: 1em;
 }
 
 #home-el h1 {
